--- a/NottyApp/templates/sht_detail.html
+++ b/NottyApp/templates/sht_detail.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notty</title>
     <div>
-        <a href='/' style="font-size:40px">X</a>
+        <a href='/sht' style="font-size:40px">X</a>
         <h1 style="display:inline">Notty</h1>
     </div>
-    <meta http-equiv="refresh" content= "5 ; url=sht">
+    <meta http-equiv="refresh" content= "5 ; url=/sht_detail">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </head>
@@ -19,28 +19,38 @@
     <br>
     <p>현재 역 위치 : 
 
-        {{line}}
+    <!--현재 호선 구분하는 코드 입니다.-->
+    {% if real_time_line == '1호선'%}
+    1호선
+    {% elif real_time_line == '2호선'%}
+    2호선
+    {% elif real_time_line == '3호선'%}
+    3호선
+    {% elif real_time_line == '4호선'%}
+    4호선
+    {% elif real_time_line == '5호선'%}
+    5호선
+    {% elif real_time_line == '6호선'%}
+    6호선
+    {% elif real_time_line == '7호선'%}
+    7호선
+    {% elif real_time_line == '8호선'%}
+    8호선
+    {% elif real_time_line == '9호선'%}
+    9호선
+    {% else %}
+    {% endif %}
 
         
     </p>
+
+    {{sht_real_path_list}}
+
     <div class="box">
         <div style="border:1px solid; padding:10px;">     
-            {% for o in obj %}
 
-                {{ o.STATION_NM}}
-                ( 코드 : {{ o.STATION_CD}} )   
-            {% endfor %}
-            
-            {% for o in gps_obj %}
-
-              x : {{ o.x}} y : {{ o.y}}
-            {% endfor %}
-            
             <br>
-            {% for o in dest_obj %}
-                {{ o.STATION_NM}}
-                ( 코드 : {{ o.STATION_CD}} )  
-            {% endfor %}
+
             <br><br>
                         <!--
             최단 시간 경로 표시
@@ -63,10 +73,10 @@
                         -->
             {{sht_path_msg}}
             <br><br><br>
-            시간표 : {{sht_joined_time_table_list.0}} {{sht_joined_time_table_list.1}} {{sht_joined_time_table_list.2}}
             <br>
 
             <br>
+            실시간 열차 위치 : {{real_time_position}}
             <br>
             ------------------------------------------------------------
             <br>
@@ -225,6 +235,7 @@
             {% endif %}
 
             <br>
+
 
 <!--
             AJAX TEST
