--- a/NottyApp/templates/sht.html
+++ b/NottyApp/templates/sht.html
@@ -16,7 +16,7 @@
 <body>
     <br>
     <form action="/sht/" method="GET">
-        <select autofocus name="time_table" id="time_selected" onchange="this.form.submit()">
+        <select name="time_table" id="time_selected" onchange="this.form.submit()">
             <option value="">시간 선택</option>
             <option value="first">{{sht_joined_time_table_list.0}}</option>
             <option value="second">{{sht_joined_time_table_list.1}}</option>
