--- a/NottyApp/templates/home.html
+++ b/NottyApp/templates/home.html
@@ -7,7 +7,67 @@
     <title>Notty</title>
     <h1 style="display:inline">Notty</h1>
     <a href='/setting/' style="font-size:40px">=</a>
-</head>
+
+    <script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-messaging.js"></script>
+    <!-- <script src="/static/js/firebase-messaging-sw.js"></script>
+     -->
+
+    <script>
+      // Import the functions you need from the SDKs you need
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+    
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: "AIzaSyB7kDt6u_8oVS_IjV_dYq8GmthV8x9n3kU",
+        authDomain: "notty-34ee7.firebaseapp.com",
+        projectId: "notty-34ee7",
+        storageBucket: "notty-34ee7.appspot.com",
+        messagingSenderId: "260740644068",
+        appId: "1:260740644068:web:2ede7cab29eae48e9740f1",
+        measurementId: "G-3VT1R1RFGL"
+      };
+    
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+      
+      const messaging = firebase.messaging();
+      console.log(messaging.getToken())
+      messaging.getToken({ vapidKey: 'BJ6VstxgXU757Lo9xq98VDS1vc5J_GGbNpXD5K-_qB8AShAKh_5JywuKW4M0c5BFHc3seIhH3tm29QsjIcGJcVA' }).then((currentToken) => {
+      if (currentToken) {
+        
+        console.log(currentToken)
+      } else {
+        console.log('No registration token available. Request permission to generate one.');
+     
+      }
+    }).catch((err) => {
+      console.log('An error occurred while retrieving token. ', err);
+    });
+    
+    
+      messaging
+       .requestPermission()
+       .then(function () {
+         console.log("Notification permission granted.");
+         return messaging.getToken()
+       })
+       .catch(function (err) {
+       console.log("Unable to get permission to notify.", err);
+     });
+    
+    
+      messaging.onMessage((payload) => {
+      console.log('Message received. ', payload);
+     
+    });
+    
+    </script>
+  </head>
 <body>
 
 <!--
