--- a/NottyApp/templates/home.html
+++ b/NottyApp/templates/home.html
@@ -14,6 +14,7 @@
     <!-- <script src="/static/js/firebase-messaging-sw.js"></script>
      -->
 
+     
     <script>
       // Import the functions you need from the SDKs you need
       // TODO: Add SDKs for Firebase products that you want to use
@@ -21,6 +22,8 @@
     
       // Your web app's Firebase configuration
       // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      
+      
       var firebaseConfig = {
         apiKey: "AIzaSyB7kDt6u_8oVS_IjV_dYq8GmthV8x9n3kU",
         authDomain: "notty-34ee7.firebaseapp.com",
@@ -39,7 +42,11 @@
       console.log(messaging.getToken())
       messaging.getToken({ vapidKey: 'BJ6VstxgXU757Lo9xq98VDS1vc5J_GGbNpXD5K-_qB8AShAKh_5JywuKW4M0c5BFHc3seIhH3tm29QsjIcGJcVA' }).then((currentToken) => {
       if (currentToken) {
-        
+
+        document.getElementById("data").value=currentToken;
+
+
+
         console.log(currentToken)
       } else {
         console.log('No registration token available. Request permission to generate one.');
@@ -67,6 +74,8 @@
     });
     
     </script>
+
+
   </head>
 <body>
 
@@ -107,21 +116,35 @@
       </form>
 -->
 
-    <form action="" method="POST">
+
+
+
+    <form action=""  method="POST">
         {% csrf_token %}
         <input type="radio" name="answers" id="answer1" value ='sht_path'>
           <label for="answer1"><p>최단 시간</p></label>
         <input type="radio" name="answers" id="answer2" value ='min_path'>
           <label for="answer2"><p>최소 환승</p></label>
-        <table>
-
-          {{ form.as_table }}
         
+        <table>
+          {{ form.as_table }}
         </table>
+        
+        <input type="hidden" name="user_token" id="data" value="">
+
         <input type="submit" value="검색">
+        
+        <br><br>
+
     </form>
+
+
 
     <a href='/favorite/'>❤</a>
     
+
+
+
+
   </body>
 </html>
