--- a/NottyApp/templates/home.html
+++ b/NottyApp/templates/home.html
@@ -27,6 +27,7 @@
       var firebaseConfig = {
         apiKey: "AIzaSyB7kDt6u_8oVS_IjV_dYq8GmthV8x9n3kU",
         authDomain: "notty-34ee7.firebaseapp.com",
+        databaseURL: "https://notty-34ee7.firebaseio.com",
         projectId: "notty-34ee7",
         storageBucket: "notty-34ee7.appspot.com",
         messagingSenderId: "260740644068",
