--- a/NottyApp/templates/real_min.html
+++ b/NottyApp/templates/real_min.html
@@ -16,7 +16,7 @@
 <body>
     <br>
     <form action="/real_min/" method="GET">
-        <select name="time_table" id="time_selected" onchange="this.form.submit()">
+        <select name="time_drop_list" id="time_selected" onchange="this.form.submit()">
             <option value="">시간 선택</option>
             <option value="first">{{min_joined_time_table_list.0}}</option>
             <option value="second">{{min_joined_time_table_list.1}}</option>
