--- a/NottyApp/templates/sht_detail.html
+++ b/NottyApp/templates/sht_detail.html
@@ -9,7 +9,7 @@
         <a href='/sht' style="font-size:40px">X</a>
         <h1 style="display:inline">Notty</h1>
     </div>
-    <meta http-equiv="refresh" content= "25 ; url=/sht_detail">
+    <meta http-equiv="refresh" content= "5 ; url=/sht_detail">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </head>
@@ -97,7 +97,7 @@
                 {{sht_path_list.60}} {{sht_path_list.61}} {{sht_path_list.62}} {{sht_path_list.63}} {{sht_path_list.64}} {{sht_path_list.65}} 
                 {{sht_path_list.66}} {{sht_path_list.67}} {{sht_path_list.68}} {{sht_path_list.69}} {{sht_path_list.70}} {{sht_path_list.71}} 
                 
-                 - {{line}}
+                 - {{sht_line}}
                 <br>
             {% elif sht_path_trans_cnt == '1' %}
             <br>
@@ -113,7 +113,7 @@
                 {{joined_path_station_list.54}} {{joined_path_station_list.55}} {{joined_path_station_list.56}} {{joined_path_station_list.57}} {{joined_path_station_list.58}} {{joined_path_station_list.59}}
                 {{joined_path_station_list.60}} {{joined_path_station_list.61}} {{joined_path_station_list.62}} {{joined_path_station_list.63}} {{joined_path_station_list.64}} {{joined_path_station_list.65}} 
                 {{joined_path_station_list.66}} {{joined_path_station_list.67}} {{joined_path_station_list.68}} {{joined_path_station_list.69}} {{joined_path_station_list.70}} {{joined_path_station_list.71}} 
-                - {{line}}            <br>
+                - {{sht_line}}            <br>
                 {{after_trans_path_list.0}} {{after_trans_path_list.1}} {{after_trans_path_list.2}} {{after_trans_path_list.3}} {{after_trans_path_list.4}} {{after_trans_path_list.5}} 
                 {{after_trans_path_list.6}} {{after_trans_path_list.7}} {{after_trans_path_list.8}} {{after_trans_path_list.9}} {{after_trans_path_list.10}} {{after_trans_path_list.11}}
                 {{after_trans_path_list.12}} {{after_trans_path_list.13}} {{after_trans_path_list.14}} {{after_trans_path_list.15}} {{after_trans_path_list.16}} {{after_trans_path_list.17}} 
@@ -142,7 +142,7 @@
                 {{joined_path_station_list.54}} {{joined_path_station_list.55}} {{joined_path_station_list.56}} {{joined_path_station_list.57}} {{joined_path_station_list.58}} {{joined_path_station_list.59}}
                 {{joined_path_station_list.60}} {{joined_path_station_list.61}} {{joined_path_station_list.62}} {{joined_path_station_list.63}} {{joined_path_station_list.64}} {{joined_path_station_list.65}} 
                 {{joined_path_station_list.66}} {{joined_path_station_list.67}} {{joined_path_station_list.68}} {{joined_path_station_list.69}} {{joined_path_station_list.70}} {{joined_path_station_list.71}} 
-                - {{line}}
+                - {{sht_line}}
                 <br>
                 {{joined_path_station_list2.0}} {{joined_path_station_list2.1}} {{joined_path_station_list2.2}} {{joined_path_station_list2.3}} {{joined_path_station_list2.4}} {{joined_path_station_list2.5}} 
                 {{joined_path_station_list2.6}} {{joined_path_station_list2.7}} {{joined_path_station_list2.8}} {{joined_path_station_list2.9}} {{joined_path_station_list2.10}} {{joined_path_station_list2.11}}
@@ -186,7 +186,7 @@
                 {{joined_path_station_list.54}} {{joined_path_station_list.55}} {{joined_path_station_list.56}} {{joined_path_station_list.57}} {{joined_path_station_list.58}} {{joined_path_station_list.59}}
                 {{joined_path_station_list.60}} {{joined_path_station_list.61}} {{joined_path_station_list.62}} {{joined_path_station_list.63}} {{joined_path_station_list.64}} {{joined_path_station_list.65}} 
                 {{joined_path_station_list.66}} {{joined_path_station_list.67}} {{joined_path_station_list.68}} {{joined_path_station_list.69}} {{joined_path_station_list.70}} {{joined_path_station_list.71}} 
-                - {{line}}
+                - {{sht_line}}
                 <br>
                 {{joined_path_station_list2.0}} {{joined_path_station_list2.1}} {{joined_path_station_list2.2}} {{joined_path_station_list2.3}} {{joined_path_station_list2.4}} {{joined_path_station_list2.5}} 
                 {{joined_path_station_list2.6}} {{joined_path_station_list2.7}} {{joined_path_station_list2.8}} {{joined_path_station_list2.9}} {{joined_path_station_list2.10}} {{joined_path_station_list2.11}}
