--- a/NottyApp/templates/home.html
+++ b/NottyApp/templates/home.html
@@ -8,6 +8,8 @@
     <h1 style="display:inline">Notty</h1>
     <a href='/setting/' style="font-size:40px">=</a>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
     <script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-messaging.js"></script>
@@ -128,18 +130,36 @@
           <label for="answer2"><p>최소 환승</p></label>
         
         <table>
-          {{ form.as_table }}
+          <!---{{ form.as_table }}-->
+          <input type="text" class="inputText1" id="startID" name="start" value="" placeholder="출발역" onfocus="this.placeholder=''" onblur="this.placeholder='출발역'">
+          <br>
+          <input type="text" class="inputText2" id="finishID" name="fin" value="" placeholder="도착역" onfocus="this.placeholder=''" onblur="this.placeholder='도착역'">
+          <br>
         </table>
         
         <input type="hidden" name="user_token" id="data" value="">
 
-        <input type="submit" value="검색">
-        
+        <input type="submit" onclick="string_process();" value="검색">
+        <br>
+        <br>
+
+
         <br><br>
 
     </form>
 
+    <button onclick="reverse();">경로 바꾸기</button>
+    <script>
+        function reverse(){
+          temp1 = document.getElementById("startID").value
+          temp2 = document.getElementById("finishID").value
+          document.getElementById("startID").value=temp2
+          document.getElementById("finishID").value=temp1
+        }
 
+
+    </script>
+<br>
 
     <a href='/favorite/'>❤</a>
     
