--- a/NottyApp/templates/flash.html
+++ b/NottyApp/templates/flash.html
@@ -12,7 +12,7 @@
         <a href='/setting/' style="font-size:40px">=</a>
     </div>
     <meta http-equiv="refresh" content= "0.6 ; url=/sht">
-    <link rel="stylesheet" href="static/css/flash.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 </head>
 <body>
