--- a/NottyApp/templates/sht.html
+++ b/NottyApp/templates/sht.html
@@ -5,79 +5,236 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notty</title>
-    <div>
+    <!-- <div>
         <a href='/' style="font-size:40px">X</a>
-        <h1 style="display:inline">Notty</h1>
-        <a href='/setting/' style="font-size:40px">=</a>
-    </div>
-    <meta http-equiv="refresh" content= "25; url=/sht">
+        <a href='/setting/' style="font-size:40px; float:right;">=</a>
+    </div> -->
+    <meta http-equiv="refresh" content= "35 ; url=/sht">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
+    <style>
+        /* h1 {
+    font-size: 40px;
+    text-align: center;
+    margin: 0;
+    padding: 20px;
+    margin-bottom:200px;
+    font-family: 'MICEGothic Bold';
+
+} */
+
+@font-face {
+          font-family: 'MICEGothic Bold';
+          src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-01@1.0/MICEGothic Bold.woff2') format('woff2');
+          font-weight: 700;
+          font-style: normal;
+        }
+    @font-face {
+        font-family: 'MICEGothic';
+        src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-01@1.0/MICEGothic.woff2') format('woff2');
+        font-weight: 400;
+        font-style: normal;
+    }
+    
+html {font-size: 1px;}
+body {font-size: 1rem;}
+
+a {
+    text-decoration: none;
+    color: #ffffff;
+    }
+
+a:visited { text-decoration: none; }
+a:hover { text-decoration: none; }
+a:focus { text-decoration: none; }
+a:hover, a:active { text-decoration: none; }
+
+
+body {
+    font-family: 'MICEGothic';
+    width: 100vw;
+    height: 100vh;
+    background-color:#9F9F9F;
+    padding: 0;
+    margin: 0;
+}
+
+.page2_icons {
+    padding: 15rem;
+    font-size: 32rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.none {
+    /* color: #9F9F9F; */
+}
+
+.notty_logo {
+    margin-top: 8px;
+    padding: 0;
+    font-size: 32px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    font-family: 'MICEGothic Bold';
+}
+
+/* 상세정보 박스 */
+#detailImformation {
+    text-align: center;
+    width: 100vw;
+    height: 60px;
+    margin-left: auto; margin-right: auto;
+    font-weight: 590;
+    padding: 0;
+    margin: 0 auto;
+    line-height: 60px;
+    font-size: 16rem;
+}
+
+/* 현재 역 이름 박스 */
+#subwayName {
+    text-align: center;
+    width: 100vw;
+    height: 150px;
+    margin-left: auto; margin-right: auto;
+    font-weight: bold;
+    font-size: 36px;
+    padding: 0;
+    margin: 0 auto;
+    line-height: 150px;
+}
+
+/* 다음 역 박스 */
+#nextSubway {
+    text-align: center;
+    width: 100vw;
+    height: 60px;
+    margin-left: auto; margin-right: auto;
+    font-weight: 590;
+    padding: 0;
+    margin: 0 auto;
+    line-height: 60px;
+    font-size: 13px;
+}
+
+#nowStationbox {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#time_selected {
+    font-size: 16px;
+    text-align: center;
+    background-color: #8b4513;
+    color: #ffffff;
+}
+
+    </style>
 </head>
-<body>
-    <br>
-    <form action="/sht/" method="GET">
-        <select name="time_drop_list" id="time_selected" onchange="this.form.submit()">
-            <option value="">시간 선택</option>
-            <option value="first">{{sht_joined_time_table_list.0}}</option>
-            <option value="second">{{sht_joined_time_table_list.1}}</option>
-            <option value="third">{{sht_joined_time_table_list.2}}</option>
-        </select>
+<body style="background-color: #9F9F9F;">
+    <!-- <h1>Notty</h1> -->
+    <div class="page2_icons">
+        <div class="none">
+            <a href='/'><i class="fa-solid fa-x "></i></a>
+            
+        </div>
+        <div class="notty_logo">Notty</div>
+        <a href='/setting/'><i class="fa-solid fa-bars"></i></a>
+    <div id="nowStationbox">
+        
+        <form action="/sht/" method="GET">
+            <!-- <select name="time_drop_list" id="time_selected" onchange="this.form.submit()" style="border-radius:0; width:206px; height:60px; float:left; margin:0;"> -->
+            <select name="time_drop_list" id="time_selected" onchange="this.form.submit()" style="border-radius:0; width:50vw; height:60px; float:left; margin:0;">
+
+                <option value="">시간 선택</option>
+                <option value="first">{{sht_joined_time_table_list.0}}</option>
+                <option value="second">{{sht_joined_time_table_list.1}}</option>
+                <option value="third">{{sht_joined_time_table_list.2}}</option>
+            </select>
         </form>
-    <br>
+        
 
-    <!--현재 호선 구분하는 코드 입니다.-->
-    {% if real_time_line == '1호선'%}
-    1호선
-    {% elif real_time_line == '2호선'%}
-    2호선
-    {% elif real_time_line == '3호선'%}
-    3호선
-    {% elif real_time_line == '4호선'%}
-    4호선
-    {% elif real_time_line == '5호선'%}
-    5호선
-    {% elif real_time_line == '6호선'%}
-    6호선
-    {% elif real_time_line == '7호선'%}
-    7호선
-    {% elif real_time_line == '8호선'%}
-    8호선
-    {% elif real_time_line == '9호선'%}
-    9호선
-    {% else %}
-    {% endif %}
-    
-    <br>
-    <a href='/sht_detail'>상세 정보</a>
-    <br>
-    <br>
-    열차 현 위치 : {{real_time_position}}
-    <br>
+       
+        
+        
+        <div
+                    id="detailImformation"
+                    style="
+                        background-color: #8b4513;
+                        color: #ffffff;
+                        /* width: 206px; */
+                        width: 50vw;
+                        height: 60px;
+                        float: left;
+                        margin: 0;
+                        /* font-size: 16px; */
+                    "
+                >
+            <a href='/sht_detail'>상세 정보</a>
+        </div>
+        
+        <div style="clear: both"></div>
 
-    <br>
+        <p id="subwayName" style="background-color: #f1efef; color: black">
+            열차 현 위치 : {{real_time_position}}
+        </p>
 
-    
-        다음 역 : {{real_next_station}}
-    {% if  left_tag == 4%}
-        <br><br>
-        출발지 3역 전 입니다.
-    {% elif  left_tag == 3%}
-        <br><br>
-        출발지 2역 전 입니다.
-    {% elif left_tag == 2 %}
-        <br><br>
-        출발지 전 역 입니다.
-    {% elif left_tag == 1 %}
-        <br><br>
-        출발역 입니다.
-    {% elif arrive_tag == 3 %}
-        <br><br>
-        목적지 도착 2역 전 입니다.
-    {% elif arrive_tag == 2 %}
-        <br><br>
-        목적지 도착 전 역 입니다.
-    {% else %}
 
-    {% endif %}
+        
+        <p
+            id="nextSubway"
+            style="background-color: #8b4513; color: #ffffff"
+                >
+            
+                다음 역 : {{real_next_station}}
+            {% if  left_tag == 4%}
+                
+                출발지 3역 전 입니다.
+            {% elif  left_tag == 3%}
+                
+                출발지 2역 전 입니다.
+            {% elif left_tag == 2 %}
+                
+                출발지 전 역 입니다.
+            {% elif left_tag == 1 %}
+                
+                출발역 입니다.
+            {% elif arrive_tag == 3 %}
+                
+                목적지 도착 2역 전 입니다.
+            {% elif arrive_tag == 2 %}
+                
+                목적지 도착 전 역 입니다.
+            {% else %}
+
+            {% endif %}
+        </p>
+    </div>
+        <!--현재 호선 구분하는 코드 입니다.-->
+        <!-- {% if real_time_line == '1호선'%}
+        1호선
+        {% elif real_time_line == '2호선'%}
+        2호선
+        {% elif real_time_line == '3호선'%}
+        3호선
+        {% elif real_time_line == '4호선'%}
+        4호선
+        {% elif real_time_line == '5호선'%}
+        5호선
+        {% elif real_time_line == '6호선'%}
+        6호선
+        {% elif real_time_line == '7호선'%}
+        7호선
+        {% elif real_time_line == '8호선'%}
+        8호선
+        {% elif real_time_line == '9호선'%}
+        9호선
+        {% else %}
+        {% endif %} -->
 </body>
 </html>
