--- a/NottyApp/templates/home.html
+++ b/NottyApp/templates/home.html
@@ -211,7 +211,7 @@
                   document.getElementById("finishID").value=temp1
                   }
                 </script>
-            <a class="side2" href='/favorite/'>즐겨찾는 경로</a>
+            <a class="side1" href='/favorite/'>즐겨찾는 경로</a>
         </div>
       </div>
     </div>
@@ -293,19 +293,26 @@
       }
 
       .select1 {
+          border-radius: 6px;
+
           display: flex;
           flex-direction: row;
           justify-content: space-between;
           margin-bottom: 20px;
+          margin-right: 11px;
       }
 
       .select2 {
+          border-radius: 6px;
+
           font-size: 15rem;
           background-color: #BBBBBB;
           width: 42vw;
           line-height: 30rem;
           height: 32rem;
           line-height: 32rem;
+          margin-left: 11px;
+
       }
 
       /* .station {
@@ -319,6 +326,7 @@
       } */
 
       /* #id_start, #id_fin {
+
         height: 30px;
         width: 60vw;
         background-color: #BBBBBB;
@@ -327,6 +335,10 @@
       } */
 
       .inputText1, .inputText2 {
+        flex-direction: column;
+        border-radius: 6px;
+        margin: 0 auto;
+
         background-color: #BBBBBB;
         border: 0;
         width: 88vw;
@@ -338,8 +350,34 @@
       }
 
       
-
       .search {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 6px 14px;
+        font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
+        border-radius: 6px;
+        border: none;
+      
+        background: #6E6D70;
+        box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1), inset 0px 0.5px 0.5px rgba(255, 255, 255, 0.5), 0px 0px 0px 0.5px rgba(0, 0, 0, 0.12);
+        color: #DFDEDF;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+
+        font-size: 30rem; 
+        line-height: 60rem;
+        height: 65rem;
+        margin-bottom: 25px;
+        margin: 0 auto;
+        width: 90vw;
+      }
+      .search:focus {
+        box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2), 0px 0.5px 1px rgba(0, 0, 0, 0.1), 0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
+        outline: 0;
+      }
+      .search-2 {
         background-color: #646464;
         font-size: 30rem; 
         line-height: 60rem;
@@ -355,9 +393,11 @@
         font-size: 14rem;
         /* color: #F9F9F9; */
         justify-content: space-around;
+        margin-top: 18px;
       }
 
       .chan {
+        margin-top: 18px;
         background-color: #9F9F9F;
         border: #9F9F9F;
         font-size: 14rem;
