--- a/NottyApp/templates/home.html
+++ b/NottyApp/templates/home.html
@@ -433,6 +433,11 @@
         margin-bottom: 10rem;
         text-align: center;
 
+        position: relative;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, 0);
+
         box-shadow:0 2px 10px -5px black;
 
       }
