--- a/NottyApp/templates/home.html
+++ b/NottyApp/templates/home.html
@@ -428,7 +428,7 @@
         width: 88vw;
         height: 60rem;
         line-height: 60rem;
-        color: #fff;
+        color: #000;
         font-size: 25rem;
         margin-bottom: 10rem;
         text-align: center;
