--- a/NottyApp/templates/home.html
+++ b/NottyApp/templates/home.html
@@ -338,6 +338,7 @@
           height: fit-content;
           left:0; right:0; margin-left:auto; margin-right:auto;
           top: 0; bottom:0; margin-top:53%; margin-bottom:auto;
+          padding-top: 20rem;
       }
 
 
@@ -417,6 +418,8 @@
         border-width: 0px 0px 3px 0px ;
         font-size: 20px;
       } */
+
+
 
       .inputText1, .inputText2 {
         flex-direction: column;
